TESIS-193: fix failing tests after SyncStatus behavior change
- Fixed shouldUpdateSyncStatusAfterSuccessfulSync to include incident data
- Fixed shouldHandleResponseWithNullData to expect empty list instead of null
- Tests now align with new behavior where SyncStatus only updates when incidents are processed